/*
 * $Id: ChangeLog,v 1.788 2011-09-11 03:19:14 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2011-09-11 00:20:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * i_window_ch
   * h_controlmisc.prg
     + Added ONCHANGE to alternate syntax.

2011-09-11 00:10:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./compile_mingw.bat
     + Added /P parameter to generate .ppo file.
       Use: compile.bat file.prg /p
       or:  compile.bat file.prg /c /p

2011-09-10 23:30:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/c_activex.c
     ! Fixed some C Compiler warnings.

2011-09-07 19:00:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/winprint.prg
  * source/h_tab.prg
  * source/c_windows.prg
  * source/c_image.prg
    ! Fixed some C compiler warnings.

2011-09-07 16:05:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/common_make.bat
    ! Changed default harbour compiler option to -w3.

2011-09-07 16:05:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/h_print.prg
  * source/h_scroll.prg
  * source/h_textarray.prg
  * source/h_activex.prg
  * source/h_pdf.prg
  * source/h_tooltip.prg
    ! Fixed some harbour compiler warnings when using -w3 switch.

2011-09-07  Cayetano Gómez  <cayetano@gomezgil.es>
   * source/h_print.prg
     ! fixed function _int25

2011-09-07 00:19:00 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
   * source/h_print.prg
     ! fixed warning
   * source/h_msgbox.prg
     * improving autotype(Function)

2011-09-05 23:35:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
  * source/c_windows.c
  * source/h_button.prg
  * source/h_combo.prg
  * source/h_checkbox.prg
  * source/h_menu.prg
    * OS_ISWINXP_OR_LATER() renamed to OSISWINXPORLATER() to avoid
      compilation error in xHarbour.